Sketch of printing
This tries to just make every graph control render. heavy handed and not
completely working yet.

(version 2 of patch)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,4 +1,8 @@
 <div>
+  <div id="printControls" ng-click="pageCtrl.print()">
+    <span class="ui-icon ui-icon-print"></span>
+    Print
+  </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport" ng-show="false">
     <!-- This needs to display messages from MessageBus -->
