Put a linebreak after nucleotides header

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -45,7 +45,7 @@
 
       <h3>NProfile Options</h3>
       <div class="nprofile-options">
-        <span>Which nucleotides to analyze?</span>
+        <span>Which nucleotides to analyze?</span><br>
         <checkbox-list ng-model="gc.nucleotides"
                        title="nucleotide type(s) represented in frame analysis"
                        options="['A', 'C', 'G', 'T']">
