Derive row height + width from CSS
This is pretty much a hack because we specify it in css and JS
separately, but still feels nicer than trying to specify the properties
in $scope to apply

--- a/npactweb/npactweb/static/js/graphs/graph-container.html
+++ b/npactweb/npactweb/static/js/graphs/graph-container.html
@@ -4,6 +4,6 @@
        class="graph"
        npact-graph
        idx="{{$index}}"
-       style="height:{{graphHeight}}px; border-bottom: 1px solid #AAF;"
+       style="height:{{graphHeight}}px;"
        ></div>
 </div>
