Further sketch of printing
This is a working iteration of causing all the rows to prerender and
capturing a promise for it. This works fairly well in chrome but in
firefox for me it slows down enough to trigger the script is running to
long warnings (even though there are liberal timeouts).

The next issue beyond it is that once all the rows are rendered and you
hit the browser print button the browser crashes under the load of
preparing to print.

Reading some resources like
http://www.html5rocks.com/en/tutorials/canvas/hidpi/ there's talk of the
backing store that the canvas is rendered on being higher dpi; not sure
if/how this is related to printing though. It seems like that may be
outdated according to
https://bugzilla.mozilla.org/show_bug.cgi?id=780362

So the next step to try is to, when printing, capture the image to
dataUri and put that as an image on the page replacing the canvas.

re #842 (1.5)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -2,6 +2,9 @@
   <div id="printControls" ng-click="pageCtrl.print()">
     <span class="ui-icon ui-icon-print"></span>
     Print
+    <span ng-if="printCounter">
+      <img ng-src="{{STATIC_BASE_URL}}images/spinner.gif" class="spinner"/>
+      Waiting on {{printCounter}}</span>
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport" ng-show="false">
