--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -7,18 +7,9 @@
       Waiting on {{printCounter}}</span>
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
-  <div id="progressreport" ng-show="false">
-    <!-- This needs to display messages from MessageBus -->
+  <div id="progressreport">
     <h3> Status </h3>
-    <div id="computationrunning">
-      <div class=" ui-corner-all" ng-class="{'ui-state-highlight': !error,
-                     'ui-state-error': error}">
-        <img ng-src="{{STATIC_BASE_URL}}images/spinner.gif" class="spinner"/>
-        <p>
-          N-PACT is: <em ng-bind="status">Initializing</em>
-        </p>
-      </div>
-    </div>
+    <div id="msgpane"></div>
   </div>
 
   <div id="results">
