Better messaging version; captures errors, prints status
Unlink the previous version this one is stylable saves all console
messages in a log(with option to email to us), and is actually used.

I added several status notifcations that go through the messagebus now;
as well as an `$exceptionHandler` so we get notified on uncaught
exceptions.

re #924 (1.5)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -8,8 +8,8 @@
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport">
-    <h3> Status </h3>
-    <div id="msgpane"></div>
+    <h3> Status <img ng-src="{{STATIC_BASE_URL}}images/mail-envelope-closed-16.png" title="Email a report about this run to Acceleration" ng-click="email()"></h3>
+    <npact-msg-pane></npact-msg-pane>
   </div>
 
   <div id="results">
