Treat the significance as a number throughout the system
We had some places as a number and some as a string so that was looping
between them.

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -54,7 +54,7 @@
       <div>
         <label>Prediction significance
         <select ng-model="gc.significance"
-                ng-options="x for x in ['0.01', '0.001', '0.0001']"
+                ng-options="x for x in [0.01, 0.001, 0.0001]"
                 title="significance threshold for high scoring segments (hits)"
                 >
         </select>
