--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,5 +1,5 @@
 <div>
-  <div id="printControls" ng-click="pageCtrl.print()">
+  <div id="printControls" ng-click="pageCtrl.print()" title="Render all graph rows for printing (this takes a minute).">
     <span class="ui-icon ui-icon-print"></span>
     Print
     <span ng-if="printCounter">
