--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -39,7 +39,7 @@
       <h3>Tracks</h3>
       <div>
         <div ng-repeat="t in gc.tracks">
-          <label><input ng-model="t.active" type="checkbox" /> {{t.text}}</label>
+          <label><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>
         </div>
       </div>
 
