Fix N-Profile text in config panel
From Dr. Brocchieri's request in email.

re #863 (0.1)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -43,9 +43,9 @@
         </div>
       </div>
 
-      <h3>NProfile Options</h3>
+      <h3>N-Profile Options</h3>
       <div class="nprofile-options">
-        <span>Which nucleotides to analyze?</span><br>
+        <span>Base types profiled:</span><br>
         <checkbox-list ng-model="gc.nucleotides"
                        title="nucleotide type(s) represented in frame analysis"
                        options="['A', 'C', 'G', 'T']">
