--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,5 +1,10 @@
 <div>
   <div id="printControls" ng-click="pageCtrl.print()" title="Render all graph rows for printing (this takes a minute).">
+    <div id="printConfirm" title="Ready to print?">
+      <p>Printing requires rendering all the graph rows, for large genomes this may take several minutes.</p>
+      <p>This takes time roughly linear to the number of rows. Narrowing the range (start and end base) or zooming out by using a larger bases/graph will both lower the time required.</p>
+    </div>
+
     <span class="ui-icon ui-icon-print"></span>
     Print
     <span ng-if="printCounter">
@@ -16,23 +21,19 @@
     <h3>Results </h3>
     <div>
       <div npact-graph-container></div>
-      <h4>Downloads</h4>
-
-      <div id="predictionresults" class="ui-state-highlight ui-corner-all"
-           ng-show="miscFiles.length > 0">
-        <div class="ui-icon ui-icon-info"></div>
-        <p>
-          The prediction results are now ready:
-          <ul id="files">
-            <li ng-repeat="f in miscFiles">
-              <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
-            </li>
-        </p>
-      </div>
-
-      <div ng-if="email">
-        <h4>Email results</h4>
-        <p>An email link to the results will be sent to <code>{{email}}</code>. You may leave this page at any time and return via that link.</p>
+      <div id="predictionresults" >
+        <h4>Downloads</h4>
+        <div class="ui-state-highlight ui-corner-all"
+             ng-show="miscFiles.length > 0">
+          <div class="ui-icon ui-icon-info"></div>
+          <p>
+            The prediction results are now ready:
+            <ul id="files">
+              <li ng-repeat="f in miscFiles">
+                <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
+              </li>
+          </p>
+        </div>
       </div>
     </div>
   </div>
