Don't render past the endBase
This includes GraphConfig into Grapher and uses it instead of trying to
pull all the options through the GraphContainer. Less translation, more
direct access.

The big impetus for this is that we need endBase and basesPerGraph
both in order to keep our render scale appropriate while not going
beyond the end base.

Update stops to not include a margin of its own, but instead call it
with the margin we've already calculated.

re #932 (1.5)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -24,10 +24,12 @@
     <div>
       <label>Range:</label>
       <input type="number" name="startBase" style="width:6em;"
-             min="0" ng-model="gc.startBase">
+             min="0" max="{{gc.length}}"
+             ng-model="gc.startBase">
       <span class="sm-text">to</span>
       <input type="number" name="endBase" style="width:6em;"
-             min="0" ng-model="gc.endBase">
+             min="0" max="{{gc.length}}"
+             ng-model="gc.endBase">
     </div>
     <div>
       <label>
