Change to bases/line wording
re #932

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -14,7 +14,7 @@
                style="width:5em;"
                min="100" required
                ng-model-options="{debounce: 1000}"
-	       ng-model="gc.basesPerGraph"/> bases/graph
+	       ng-model="gc.basesPerGraph"/> bases/line
       </label>
       <div class="error" ng-messages="configForm.basesPerGraph.$error">
         <div ng-message="min">Cannot zoom in that far.</div>
