Setup RequestPDF button
This removes the FileManager and instead adds a DownloadsCtrl that is a
controller for that section of the page. It queries the prediction
manager and will respond to the button click for requesting a pdf to
make that happen.

The actual server side call to get the PDF isn't happening yet, but
that should be a relatively easy next step.

re #946 (0.5)

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -22,17 +22,19 @@
 
   <div id="results">
     <h3 class="pointer" onclick="$('#downloads').toggle('blind');">Downloads</h3>
-    <div id="downloads" style="display:none;">
-      <div class="ui-state-highlight ui-corner-all"
-           ng-show="miscFiles.length > 0">
-        <div class="ui-icon ui-icon-info"></div>
-        <p>
-          The prediction results are now ready:
+    <div id="downloads" style="display:none;" ng-controller="DownloadsCtrl">
+      <div class="ui-state-highlight ui-corner-all" >
+        <p><button ng-if="!pdf" ng-click="requestPDF()" class="btn md-text">Request PDF</button>
+          <a ng-if="pdf" href="{{FETCH_URL}}{{pdf}}" target="_blank">Download PDF</a>
+        </p>
+        <div ng-show="predictionFiles.length > 0">
+          <p>The prediction results are now ready:
           <ul id="files">
-            <li ng-repeat="f in miscFiles">
+            <li ng-repeat="f in predictionFiles">
               <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
             </li>
-        </p>
+          </ul>
+        </div>
       </div>
     </div>
     <h3 class="pointer" onclick="$('#graphcontainer').toggle('blind');">Graphs</h3>
