--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -7,7 +7,8 @@
       <li>Double click on a graph to zoom into that point</li>
       <li>Hold shift and double click on a graph to zoom out</li>
     </ul>
-    <div><a href="?" class="btn md-text" target="_self">Reset to defaults</a></div>
+    <div><a href="?" class="btn md-text" target="_self">Reset to defaults</a>
+      <a href="#" ng-click="requestPDF()" class="btn md-text">Request PDF</a></div>
     <div>
       <label>Zoom:
         <input type="number" name="basesPerGraph"
@@ -62,6 +63,5 @@
         </select>
         </label>
       </div>
-      <button ng-if="!pdf" ng-click="requestPDF()" class="btn md-text">Request PDF</button>
   </form>
 </div>
