--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -8,7 +8,7 @@
       <li>Hold shift and double click on a graph to zoom out</li>
     </ul>
     <div><a href="?" class="btn md-text" target="_self">Reset to defaults</a>
-      <a href="#" ng-click="requestPDF()" class="btn md-text">Request PDF</a></div>
+      </div>
     <div>
       <label>Zoom:
         <input type="number" name="basesPerGraph"
