--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,18 +1,22 @@
 <div>
   <div id="printControls"
-       class="pointer"
-       ng-click="pageCtrl.print()"
        title="Render all graph rows for printing (this takes a minute).">
+
     <div id="printConfirm" title="Ready to print?">
       <p>Printing requires rendering all the graph rows, for large genomes this may take several minutes.</p>
       <p>This takes time roughly linear to the number of rows. Narrowing the range (start and end base) or zooming out by using a larger bases/graph will both lower the time required.</p>
     </div>
 
-    <span class="ui-icon ui-icon-print"></span>
-    Print
+    <a href="#" ng-click="pageCtrl.print()" class="btn md-text">
+      <span class="ui-icon ui-icon-print"></span>
+      Print
+    </a>
     <span ng-if="printCounter">
       <img ng-src="{{STATIC_BASE_URL}}images/spinner.gif" class="spinner"/>
-      waiting on {{printCounter}} rows to finish</span>
+      waiting on {{printCounter}} rows to finish
+    </span>
+
+    <a href="#" ng-click="pageCtrl.requestPDF()" class="btn md-text">Request PDF</a>
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport">
