Use jquery-ui accordion on the downloads and graphs sections
This seems a bit heavy handed on the page, maybe Jesse can make it a
little better.

--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -24,8 +24,8 @@
     <npact-msg-pane></npact-msg-pane>
   </div>
 
-  <div id="results">
-    <h3 class="pointer" onclick="$('#downloads').toggle('blind');">Downloads</h3>
+  <div id="results" jq-accordion>
+    <h3>Downloads</h3>
     <div id="downloads" style="display:none;" ng-controller="DownloadsCtrl as dc">
       <div class="ui-state-highlight ui-corner-all" >
         <p>
