--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -2,11 +2,6 @@
   <div id="printControls"
        title="Render all graph rows for printing (this takes a minute).">
 
-    <div id="printConfirm" title="Ready to print?">
-      <p>Printing requires rendering all the graph rows, for large genomes this may take several minutes.</p>
-      <p>This takes time roughly linear to the number of rows. Narrowing the range (start and end base) or zooming out by using a larger bases/graph will both lower the time required.</p>
-    </div>
-
     <a href="#" ng-click="pageCtrl.print()" class="btn md-text">
       <span class="ui-icon ui-icon-print"></span>
       Print
@@ -24,24 +19,28 @@
     <npact-msg-pane></npact-msg-pane>
   </div>
 
-  <div id="results" jq-accordion>
-    <h3>Downloads</h3>
-    <div id="downloads" style="display:none;" ng-controller="DownloadsCtrl as dc">
-      <div class="ui-state-highlight ui-corner-all" >
-        <p>
-          <a ng-if="pdf" href="{{FETCH_URL}}{{pdf}}" target="_blank">Download PDF</a>
-        </p>
-        <div ng-show="predictionFiles.length > 0">
-          <p>The prediction results are now ready:
-          <ul id="files">
-            <li ng-repeat="f in predictionFiles">
-              <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
-            </li>
-          </ul>
+  <div id="results" >
+    <div jq-accordion active="false">
+      <h3>Downloads</h3>
+      <div id="downloads" style="display:none;" ng-controller="DownloadsCtrl as dc">
+        <div class="ui-state-highlight ui-corner-all" >
+          <p>
+            <a ng-if="pdf" href="{{FETCH_URL}}{{pdf}}" target="_blank">Download PDF</a>
+          </p>
+          <div ng-show="predictionFiles.length > 0">
+            <p>The prediction results are now ready:
+              <ul id="files">
+                <li ng-repeat="f in predictionFiles">
+                  <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
+                </li>
+              </ul>
+          </div>
         </div>
       </div>
     </div>
-    <h3>Graphs</h3>
-    <div npact-graph-container id="graphcontainer"></div>
+    <div jq-accordion active="0">
+      <h3>Graphs</h3>
+      <div npact-graph-container id="graphcontainer"></div>
+    </div>
   </div>
 </div>
