--- a/npactweb/npactweb/static/js/graphs/page.html
+++ b/npactweb/npactweb/static/js/graphs/page.html
@@ -1,8 +1,8 @@
 <div>
-  <div id="printControls"
-       title="Render all graph rows for printing (this takes a minute).">
+  <div id="printControls" >
 
-    <a href="#" ng-click="pageCtrl.print()" class="btn md-text">
+    <a href="#" ng-click="pageCtrl.print()" class="btn md-text"
+       title="Render all graph rows on this page for printing (this takes a minute).">
       <span class="ui-icon ui-icon-print"></span>
       Print
     </a> 
@@ -11,7 +11,10 @@
       waiting on {{printCounter}} rows to finish
     </span>
 
-    &nbsp;<a href="#" ng-click="pageCtrl.requestPDF()" class="btn md-text">Request PDF</a>&nbsp;
+    &nbsp;<a href="#"
+             title="Have the server generate a PDF for printing (this takes a minute)."
+             ng-click="pageCtrl.requestPDF()"
+             class="btn md-text">Request PDF</a>&nbsp;
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport">
@@ -28,7 +31,7 @@
             <a ng-if="pdf" href="{{FETCH_URL}}{{pdf}}" target="_blank">Download PDF</a>
           </p>
           <div ng-show="predictionFiles.length > 0">
-            <p>The prediction results are now ready:
+            <p>Results are now ready:
               <ul id="files">
                 <li ng-repeat="f in predictionFiles">
                   <a href="{{FETCH_URL}}{{f}}" target="_blank">{{f}}</a>
