--- a/npactweb/npactweb/static/js/graphs/extract.html
+++ b/npactweb/npactweb/static/js/graphs/extract.html
@@ -3,7 +3,7 @@
   <hr/>
   <a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastn&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{ddna}}&JOB_TITLE={{extract.name}}" target="_blank">nBLAST this Sequence</a>
   <br>
-  <a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastp&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{ddnaP}}&JOB_TITLE={{extract.name}}" target="_blank">pBLAST this Sequence</a>
+  <a ng-if="ddnaP" href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastp&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{ddnaP}}&JOB_TITLE={{extract.name}}" target="_blank">pBLAST this Sequence</a>
   <br>
   <pre>{{extract | json}}</pre>
 
