Made the color blind friendly flag persist to cookies.
 * Added angular cookies module
 * bower (re)installed some stuff

re Programming:#847 (.5)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -34,7 +34,8 @@
     </div>
     <div>
       <label>
-        <input type="checkbox" ng-model="gc.colorBlindFriendly" />
+        <input type="checkbox" ng-model="gc.colorBlindFriendly"
+               ng-change="gc.cookiePersist()" />
         Color-blind friendly
       </label>
     </div>
