--- a/npactweb/npactweb/static/js/graphs/extract.html
+++ b/npactweb/npactweb/static/js/graphs/extract.html
@@ -1,10 +1,18 @@
 <div>
-  Extract {{extract.name}}
+  Extract {{extract.name}} : {{extract.start}}-{{extract.end}} {{extract.complement ? "(complement)" : "" }}
+  <br>
+    Phase: {{extract.phase}}, Approximate: {{extract.approximate}}
   <hr/>
-  <a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastn&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{ddna}}&JOB_TITLE={{extract.name}}" target="_blank">nBLAST this Sequence</a>
-  <br>
+  <a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastn&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{query}}&JOB_TITLE={{extract.name}}" target="_blank">nBLAST this Sequence</a>
+  |
   <a ng-if="ddnaP" href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastp&PAGE_TYPE=BlastSearch&BLAST_SPEC=&LINK_LOC=blasttab&QUERY={{ddnaP}}&JOB_TITLE={{extract.name}}" target="_blank">pBLAST this Sequence</a>
-  <br>
-  <pre>{{extract | json}}</pre>
-
+  <hr>
+  DNA:<br >
+  {{ddna}}
+  <hr>
+  DNA (reverse complement):<br >
+  {{ddnaRC}}
+  <hr>
+  Amino Acid Sequence:<br >
+  {{ddnaP}}
 </div>
