Be more specific when showing reverse complement DNA / Amino Sequence in the extract re Programming:#763

--- a/npactweb/npactweb/static/js/graphs/extract.html
+++ b/npactweb/npactweb/static/js/graphs/extract.html
@@ -10,9 +10,11 @@
   DNA:<br >
   {{ddna}}
   <hr>
+  <div ng-if="extract.complement">
   DNA (reverse complement):<br >
   {{ddnaRC}}
+  </div>
   <hr>
-  Amino Acid Sequence:<br >
+  Amino Acid Sequence<span ng-if="extract.complement">(reverse complement)</span>:<br >
   {{ddnaP}}
 </div>
