Move control panel help text into a tooltip popup.
re #972

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -1,12 +1,11 @@
 <div id="configContainer">
   <form name="configForm">
-    <h2>Graph Controls</h2>
-
-    <ul>
-      <li>Click and drag on a graph to pan from left to right</li>
-      <li>Double click on a graph to zoom into that point</li>
-      <li>Hold shift and double click on a graph to zoom out</li>
-    </ul>
+    <h2>Graph Controls <span class="qtip-help-icon">?</span></h2>
+    <div class="qtip-help-text">
+      <p>To pan left or right you can either use the left and right
+      arrow keys or click and drag on graph</p>
+      <p>Double click on a graph to zoom into that point. Hold shift and double click on a graph to zoom out.</p>
+    </div>
     <div><a href="?" class="btn md-text" target="_self">Reset to defaults</a>
       </div>
     <div>
