Add goto base function
This adds a new textbox in the control panel where you can type in a
base number, we scroll that into view and paint a vertical line in
place.

re #963

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -32,6 +32,13 @@
              ng-model="gc.endBase">
     </div>
     <div>
+      <label>Goto:
+        <input type="number" name="gotoBase" style="width:6em;"
+               min="0" max="{{gc.length}}"
+               ng-model="gc.gotoBase">
+      </label>
+    </div>
+    <div>
       <label>
         <input type="checkbox" ng-model="gc.colorBlindFriendly"
                ng-change="gc.cookiePersist()" />
