Keep the top visible graphrow at the top when the row height changes
By figuring out how many elements were hidden above and multiply that by
the height delta we can scroll the window by enough to keep the row that
was at the top still at the top.

Along the way I realized that our previous modifications to find the
graph row outerheight had a race condition: the css change wouldn't take
effect until after we had already tried to read the updated
value. Working with this stale data caused visibility problems that
became more apparent when I was changing the active tracks a lot.

I added `overflow:hidden` to the stylesheet to clip already rendered
rows that are above the page and taller. Otherwise they would overlfow
into the current viewport but since they *shouldn't be* visible we
weren't redrawing them.

I moved the `updateVisibility` calls into the draw/redraw/rebuild
functions. Previously they were semi-haphazardly as the immediate
previous line every time. This makes it a bit more consisten and
readable.

re #963 (1.25)

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -48,7 +48,7 @@
 
       <h3>Tracks</h3>
       <div>
-        <div ng-repeat="t in gc.tracks">
+        <div ng-repeat="t in gc.tracks track by t.name">
           <label><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>
         </div>
       </div>
