--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -50,11 +50,13 @@
                npact-orf-finder
                >
       </label>
-      <span ng-show="hits && hits.length > 0">
-      <button ng-click="hitsIndex = hitsIndex - 1" class="arrowbutton">&lt;</button>
-      <button ng-click="hitsIndex = hitsIndex + 1" class="arrowbutton">&gt;</button>
-      {{hitsIndex}} of {{hits.length}}
-
+      <span ng-show="results && results.length > 0">
+      <button ng-click="resultsIndex = resultsIndex - 1" class="arrowbutton">&lt;</button>
+      <button ng-click="resultsIndex = resultsIndex + 1" class="arrowbutton">&gt;</button>
+      {{resultsIndex}} of {{results.length}}
+      </span>
+      <span ng-show="results && results.length == 0">
+        No results found
       </span>
     </div>
     <div>
