Take startBase and offset into account for goto/scrollto
Previously the logic had assumed startbase was always zero which isn't
true in this system. Take both the configured startBase and the
offset (effected by the drag/horizontal scroll) into account while
figuring out where to scroll to.

re #963 (0.25)

--- a/npactweb/npactweb/static/js/graphs/graph-container.html
+++ b/npactweb/npactweb/static/js/graphs/graph-container.html
@@ -4,6 +4,7 @@
        class="graph"
        npact-graph
        idx="{{$index}}"
+       start-base="{{spec}}"
        style="height:{{graphHeight}}px;"
        ></div>
 </div>
