Label search results starting from 1
At Dr. Brocchieri's request; this is a bit more standard.

re #963

--- a/npactweb/npactweb/static/js/graphs/config.html
+++ b/npactweb/npactweb/static/js/graphs/config.html
@@ -53,7 +53,7 @@
       <span ng-show="results && results.length > 0">
       <button ng-click="resultsIndex = resultsIndex - 1" class="arrowbutton">&lt;</button>
       <button ng-click="resultsIndex = resultsIndex + 1" class="arrowbutton">&gt;</button>
-      {{resultsIndex}} of {{results.length}}
+      {{resultsIndex + 1}} of {{results.length}}
       </span>
       <span ng-show="results && results.length == 0">
         No results found
