Add angular ui to processing page
Accordion works now, just need to fix the modal buttons.
Also styled everything with bootstrap (message handling, buttons, accordion glyphicons).

--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -1,6 +1,6 @@
 <div id="configContainer">
   <form name="configForm">
-    <h2>Graph Controls <span class="qtip-help-icon">?</span></h2>
+    <h2>Graph Controls <span>?</span></h2>
     <div class="qtip-help-text">
       <p>To pan left or right you can either use the left and right
       arrow keys or click and drag on graph</p>
