--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -1,49 +1,60 @@
 <div>
   <div id="printControls" >
 
-    <a href="#" ng-click="pageCtrl.print()" class="btn md-text"
-       title="Render all graph rows on this page for printing (this takes a minute).">
-      <span class="ui-icon ui-icon-print"></span>
+    <button class="btn btn-form" action="#" ng-click="pageCtrl.print()"
+          title="Render all graph rows on this page for printing (this takes a minute).">
       Print
-    </a> 
+      <span class="glyphicon glyphicon-print"></span>
+    </button> 
     <span ng-if="printCounter">
       <img ng-src="{{STATIC_BASE_URL}}images/spinner.gif" class="spinner"/>
       waiting on {{printCounter}} rows to finish
     </span>
 
-    &nbsp;<a href="#"
-             title="Have the server generate a PDF for printing (this takes a minute)."
-             ng-click="pageCtrl.requestPDF()"
-             class="btn md-text">Request PDF</a>&nbsp;
+    &nbsp;<button class="btn btn-form"
+                title="Have the server generate a PDF for printing (this takes a minute)."
+                ng-click="pageCtrl.requestPDF()">Request PDF</button>&nbsp;
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport">
-    <h3> Status <img ng-src="{{STATIC_BASE_URL}}images/mail-envelope-closed-16.png" title="Email a report about this run to Acceleration" ng-click="email()"></h3>
+    <h3> Status <a title="Email a report about this run to Acceleration" ng-click="email()"><span class="glyphicon glyphicon-envelope" style="font-size: 16px;"></span></a></h3>
     <npact-msg-pane></npact-msg-pane>
   </div>
 
-  <div id="results" >
-    <div jq-accordion active="false">
-      <h3 class="">Downloads</h3>
-      <div id="downloads" style="display:none;" ng-controller="DownloadsCtrl as dc">
-        <div class="ui-state-highlight ui-corner-all" >
-          <p>
-            <a ng-if="pdf" href="{{FETCH_BASE_URL}}{{pdf}}" target="_blank">Download PDF</a>
-          </p>
-          <div ng-show="predictionFiles.length > 0">
-            <p>Results are now ready:
-              <ul id="files">
-                <li ng-repeat="f in predictionFiles">
-                  <a href="{{FETCH_BASE_URL}}{{f}}" target="_blank">{{f}}</a>
-                </li>
-              </ul>
+  <div id="results" ng-controller="Results">
+    <accordion close-others="false">
+      <accordion-group is-open="status.open">
+        <accordion-heading>
+          <div>
+            Downloads<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+          </div>
+        </accordion-heading>
+        <div id="downloads" ng-controller="DownloadsCtrl as dc">
+          <div class="ui-state-highlight ui-corner-all" >
+            <p>
+              <a ng-if="pdf" href="{{FETCH_BASE_URL}}{{pdf}}" target="_blank">Download PDF</a>
+            </p>
+            
+            <div ng-show="predictionFiles.length > 0">
+              <p>Results are now ready:
+                <ul id="files">
+                  <li ng-repeat="f in predictionFiles">
+                    <a href="{{FETCH_BASE_URL}}{{f}}" target="_blank">{{f}}</a>
+                  </li>
+                </ul>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div jq-accordion active="0">
-      <h3>Graphs</h3>
-      <div npact-graph-container id="graphcontainer"></div>
-    </div>
+      </accordion-group>
+      <accordion-group is-open="status.isFirstOpen">
+        <accordion-heading>
+          <div>
+            Graphs<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.isFirstOpen, 'glyphicon-chevron-right': !status.isFirstOpen}"></i>
+          </div>
+        </accordion-heading>
+        <div npact-graph-container id="graphcontainer"></div>
+      </accordion-group>
+    </accordion>
   </div>
 </div>
