--- a/npactflask/npactflask/static/js/graphs/pdfReady.html
+++ b/npactflask/npactflask/static/js/graphs/pdfReady.html
@@ -1,4 +1,4 @@
-<div title="The PDF is ready">
-  <p><a href="{{FETCH_URL}}{{model.pdf}}" target="_blank">download now</a></p>
+<div title="The PDF is ready" ng-controller="DownloadsCtrl">
+  <p><a href="{{FETCH_BASE_URL}}{{pdf}}" target="_blank">Download Now</a></p>
   <p>It is also available under "Downloads"</p>
 </div>
