--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -1,13 +1,12 @@
-<div id="configContainer">
+<div id="configContainer" ng-controller="TooltipCtrl">
   <form name="configForm">
-    <h2>Graph Controls <span>?</span></h2>
-    <div class="qtip-help-text">
-      <p>To pan left or right you can either use the left and right
-      arrow keys or click and drag on graph</p>
-      <p>Double click on a graph to zoom into that point. Hold shift and double click on a graph to zoom out.</p>
-    </div>
+    <h2>Graph Controls <span tooltip-template="'helpTool'" tooltip-placement="right" tooltip-class="customClass">?</span></h2>
     <div><a href="?" class="btn md-text" target="_self">Reset to defaults</a>
-      </div>
+    </div>
+
+    <script type="text/ng-template" id="helpTool"><p>To pan left or right you can either use the <b>left and right arrow keys</b> or <b>click and drag</b> on graph</p><p><b>Double click</b> on a graph to zoom into that point. Hold <b>shift and double click</b> on a graph to zoom out.</p>
+    </script>
+
     <div>
       <label>Zoom:
         <input type="number" name="basesPerGraph"
