Fixed height of graph rows
Added 20px to the height of graph rows so now the interval numbers are visible.

--- a/npactflask/npactflask/static/js/graphs/graph-container.html
+++ b/npactflask/npactflask/static/js/graphs/graph-container.html
@@ -5,6 +5,6 @@
        npact-graph
        idx="{{$index}}"
        start-base="{{spec}}"
-       style="height:{{graphHeight}}px;"
+       style="height:{{graphHeight + 20}}px;"
        ></div>
 </div>
