--- a/npactflask/npactflask/static/js/graphs/graph-container.html
+++ b/npactflask/npactflask/static/js/graphs/graph-container.html
@@ -1,10 +1,11 @@
 <div>
   <div ng-repeat="spec in graphSpecs track by $index"
        id="graph_{{$index}}"
-       class="graph"
-       npact-graph
-       idx="{{$index}}"
-       start-base="{{spec}}"
-       style="height:{{graphHeight + 20}}px;"
-       ></div>
+       class="graph">
+    <div npact-graph
+         idx="{{$index}}"
+         start-base="{{spec}}"
+         style="height:{{graphHeight}}px;">
+    </div>
+  </div>
 </div>
