--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -13,7 +13,7 @@
 
     &nbsp;<a href="#" ng-click="pageCtrl.requestPDF()"
              title="Have the server generate a PDF for printing (this takes a minute)."
-             class="btn md-text">Request PDF</a>&nbsp;
+             class="btn md-text btn-form">Request PDF</a>&nbsp;
   </div>
   <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
   <div id="progressreport">
