--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -61,8 +61,12 @@
     <div>
       <label>
         <input type="checkbox" ng-model="gc.colorBlindFriendly"
-               ng-change="gc.cookiePersist()" />
+               ng-change="gc.cookiePersist()">
         Color-blind friendly
+      </label>
+      <label>
+        <input type="checkbox" ng-model="gc.mycoplasma">
+        Mycoplasma
       </label>
     </div>
 
